# c_plus_otus

./: .gitignore  Doxyfile  README.md  _config.yml
.github/workflows/: otus_hw.yml  otus_hw2.yml  otus_hw3.yml  otus_hw4.yml  static.yml
hm1/: CMakeLists.txt  CMakePresets.json  functions.cmake  main.cpp  version.h.in
hm1/tests/: CMakeLists.txt  hw1BoostTest.cpp
hm2/: CMakeLists.txt  CMakePresets.json  main.cpp
hm2/src/: IpAddressSorter.cpp  IpAddressSorter.hpp
hm3/: CMakeLists.txt  CMakePresets.json  main.cpp  version.h.in
hm3/src/: CustomAllocator.hpp  CustomMap.hpp  CustomMapIterator.hpp  CustomNode.hpp
hm4/: CMakeLists.txt  CMakePresets.json  Doxyfile  main.cpp  version.h.in
